Resolve ExpExperiment QueryRowReference to Assay Batch if related